--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
-    "nodemon": "^3.1.1"
+    "nodemon": "^3.1.1",
+    "sharp": "^0.33.4"
   }
 }
