--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "formidable": "^3.5.1",
     "js-base64": "^3.7.7",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.4.3",
     "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
